--- a/pom.xml
+++ b/pom.xml
@@ -7,15 +7,17 @@
     <groupId>dataflow</groupId>
     <artifactId>synctool</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <modules>
         <module>st-common</module>
+        <module>st-core</module>
+        <module>st-management</module>
     </modules>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.0.RELEASE</version>
+        <version>1.5.9.RELEASE</version>
     </parent>
     
 
