--- a/st-common/pom.xml
+++ b/st-common/pom.xml
@@ -5,11 +5,12 @@
     <parent>
         <artifactId>synctool</artifactId>
         <groupId>dataflow</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>st-common</artifactId>
+    <name>st-common</name>
 
     <properties>
         <commonio.version>2.4</commonio.version>
